# test-site

./: .gitignore  README.md  create-certificates.sh  index.html  pyproject.toml  style.css  tasks.py
alembic/: env.py  script.py.mako
alembic/versions/: b0be7d1e52bf_initial.py  c3f1d3ab34d2_add_name_field.py  e1e19497e31f_add_reported_field.py
docker/: Dockerfile  Dockerfile.dockerignore  compose.nginx.yaml  compose.report.yaml  compose.yaml
email/: _footer.mjml  _header.mjml  startSales.mjml
nginx/: test-site.conf
src/server/: __init__.py  __main__.py  app.py  config.py  database.py  export.py  logging-docker.yaml  logging.py  logging.yaml  report.py  site.py
static/: README.md  index.html  script3.js  style.css
static/1/: index.html  script.js  style.css
static/1/fonts/: stylesheet.css
static/media/: video-background.webm
typings/invoke/: config.pyi  context.pyi  env.pyi  exceptions.pyi  runners.pyi  tasks.pyi  terminals.pyi  util.pyi  watchers.pyi
typings/invoke/parser/: __init__.pyi  argument.pyi  context.pyi  parser.pyi
