[project]
# A somewhat bad name even for such site
name = "test-site"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "Frank Sergey", email = "s@frank.ru" }]
classifiers = ["Private :: Do Not Upload"]

# ============
# Dependencies
# ============
requires-python = "~=3.14.0" # No need for broad support
dependencies = [
    "fastapi[standard]>=0.136.1",
    "winloop>=0.5.0 ; sys_platform == 'win32'",
    "uvloop>=0.22.1 ; sys_platform == 'linux'",
]

# ============
# Build System
# ============
[project.scripts]
test-site = "server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
