[project]
# A somewhat bad name even for such site
name = "test-site"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "Frank Sergey", email = "s@frank.ru" }]
classifiers = ["Private :: Do Not Upload"]

# ============
# Dependencies
# ============
requires-python = "~=3.14.0" # No need for broad support
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "winloop>=0.5.0 ; sys_platform == 'win32'",
    "uvloop>=0.22.1 ; sys_platform == 'linux'",
    "concurrent-log-handler>=0.9.29",
    "rich>=15.0.0",
    "sqlalchemy[aiosqlite]>=2.0.49",
]

[project.optional-dependencies]
postgres = [
    "sqlalchemy[postgresql-psycopgbinary]>=2.0.49",
]

[dependency-groups]
dev = [
    "invoke>=3.0.3",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
]

# ============
# Build System
# ============
[project.scripts]
export-emails = "server.export:main"
test-site = "server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

# =============
# Ruff Settings
# =============
[tool.ruff]
line-length = 79 # PEP-8

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
# Выбираем все правила линтера
select = ["ALL"]
# Игнорируем лишние наборы правил
ignore = [
    "D",       # Этот репо пока строго не документируется
    "ARG",     # flake8-unused-arguments (иногда полезен для рефакторинга)
    "RUF001",
    "RUF002",
    "RUF003",
    "TD003",   # Вставляем Issue Link, только если создаём Issue
    "FIX",     # Обычно надоедает, но полезно как напоминалка
    "COM812",  # Redundant with formatter
    "PLC0414", # Противоречит семантике неиспользуемых явно импортов
    "EXE001",
]
extend-safe-fixes = ["TC", "PYI021"]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
# Non-production код не должен быть строго задокументирован
"!src/**" = ["D", "SLF"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-builtins]
ignorelist = ["id"]

[tool.ruff.lint.flake8-type-checking]
# Когда Ruff требует запихнуть какие-то импорты в TYPE_CHECKING блок,
# но они действительно нужны в Runtime, добавьте исключения сюда
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "server.database.Base",
]
runtime-evaluated-decorators = [
    "invoke.tasks.task",
    "fastapi.APIRouter.get",
    "fastapi.APIRouter.post",
    "fastapi.APIRouter.put",
    "fastapi.APIRouter.delete",
    "fastapi.APIRouter.options",
    "fastapi.APIRouter.head",
    "fastapi.APIRouter.patch",
    "fastapi.APIRouter.trace",
]

# ================
# Pyright Settings
# ================
[tool.pyright]
typeCheckingMode = "strict" # Change to standard if you want
pythonVersion = "3.14"

reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportUnnecessaryCast = "warning"

# ================
# Pyrefly Settings
# ================
[tool.pyrefly]
python-version = "3.14.0"
infer-with-first-use = false

[tool.pyrefly.errors]
redundant-cast = "warn"

# ================
# Alembic settings
# ================
[tool.alembic]
# https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
script_location = "%(here)s/alembic"
file_template = "%%(rev)s_%%(slug)s"
prepend_sys_path = [".", "src"]

# Эти хуки исполняются после генерации ревизий
[[tool.alembic.post_write_hooks]]
name = "ruff-check"
type = "module"
module = "ruff"
options = "check --fix-only REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff-format"
type = "module"
module = "ruff"
options = "format REVISION_SCRIPT_FILENAME"
